minor overflow fix

--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -213,6 +213,7 @@ ul li:hover ul.cat-dropdown {
     width: 100vw;
     height: 100vh;
     background-color: #e8e8ff !important;
+    overflow-x: hidden;
   }
   
   #main {
